--- a/css/frontstyle.css
+++ b/css/frontstyle.css
@@ -97,10 +97,10 @@ font-size: 20px;
 
 #LOGO{
 	position: relative;
-	top: -30px;
-	left: 180px;
-	height: 30%;
-	width: 30%;
+	/* top: -30px; */
+	/* left: 180px; */
+	height: 35%;
+	width: 35%;
 
 }
 
