--- a/css/frontstyle.css
+++ b/css/frontstyle.css
@@ -141,7 +141,7 @@ font-size: 20px;
 	text-align: center;
 	color: #fff;
 	border: none;
-	background-color: #00b7ff;
+	background-color: #00FF44;
 }
 
 .footer h5,a{
